force-app/main/default/objects/SDM__c/fields/Ability_to_move_freely_within_their_home__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_move_freely_within_their_home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ability to move freely within their home</inlineHelpText>
    <label>Ability to move freely within their home</label>
    <type>Checkbox</type>
</CustomField>