force-app/main/default/objects/SDM__c/fields/Adult_being_discharged_from_a_facility__c.field-meta.xml
<CustomField>
    <fullName>Adult_being_discharged_from_a_facility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>An adult being discharged from a facility and parents refuse to participate in planning for the adult</inlineHelpText>
    <label>Adult being discharged from a facility</label>
    <type>Checkbox</type>
</CustomField>