force-app/main/default/objects/SDM__c/fields/Alleged_Maltreator_s__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Maltreator_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Maltreator(s)</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(((1 AND 2) OR (6 AND 7)) OR (3 AND 4)) AND 5</booleanFilter>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SDMS (Alleged Maltreator(s))</relationshipLabel>
    <relationshipName>SDMS1</relationshipName>
    <type>Lookup</type>
</CustomField>