force-app/main/default/objects/SDM__c/fields/Alleged_victim_have_access_to_services__c.field-meta.xml
<CustomField>
    <fullName>Alleged_victim_have_access_to_services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the alleged victim have access to services which are necessary to maintain physical or mental health or both?</inlineHelpText>
    <label>Alleged victim have access to services</label>
    <type>Checkbox</type>
</CustomField>