force-app/main/default/objects/SDM__c/fields/Assistance_in_personal_hygiene__c.field-meta.xml
<CustomField>
    <fullName>Assistance_in_personal_hygiene__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Assistance in personal hygiene</inlineHelpText>
    <label>Assistance in personal hygiene</label>
    <type>Checkbox</type>
</CustomField>