force-app/main/default/objects/SDM__c/fields/Court_order_for_any_victim_being_deemed__c.field-meta.xml
<CustomField>
    <fullName>Court_order_for_any_victim_being_deemed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there a court order for any victim being deemed by a court as unable to care for themselves or their affairs</inlineHelpText>
    <label>Court order for any victim being deemed</label>
    <type>Checkbox</type>
</CustomField>