force-app/main/default/objects/SDM__c/fields/Does_this_person_have_power_of_attorney__c.field-meta.xml
<CustomField>
    <fullName>Does_this_person_have_power_of_attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this person have power of attorney for any alleged victims or person’s financial entities</inlineHelpText>
    <label>Does this person have power of attorney</label>
    <type>Checkbox</type>
</CustomField>