force-app/main/default/objects/SDM__c/fields/Giving_adult_toxic_chemicals_alcohol__c.field-meta.xml
<CustomField>
    <fullName>Giving_adult_toxic_chemicals_alcohol__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Giving adult toxic chemicals,alcohol or drugs</inlineHelpText>
    <label>Giving adult toxic chemicals,alcohol</label>
    <type>Checkbox</type>
</CustomField>