force-app/main/default/objects/SDM__c/fields/Have_adequate_clothing__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_clothing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have adequate clothing</inlineHelpText>
    <label>Have adequate clothing</label>
    <type>Checkbox</type>
</CustomField>