force-app/main/default/objects/SDM__c/fields/Have_adequate_electricity_and_water__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_electricity_and_water__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have adequate electricity and water</inlineHelpText>
    <label>Have adequate electricity and water</label>
    <type>Checkbox</type>
</CustomField>