force-app/main/default/objects/SDM__c/fields/Have_adequate_food__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_food__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have adequate food</inlineHelpText>
    <label>Have adequate food</label>
    <type>Checkbox</type>
</CustomField>