force-app/main/default/objects/SDM__c/fields/Have_adequate_heated_and_ventilated__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_heated_and_ventilated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have adequate heated and ventilated shelter</inlineHelpText>
    <label>Have adequate heated and ventilated</label>
    <type>Checkbox</type>
</CustomField>