force-app/main/default/objects/SDM__c/fields/Have_adequate_household_necessities__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_household_necessities__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have adequate household necessities</inlineHelpText>
    <label>Have adequate household necessities</label>
    <type>Checkbox</type>
</CustomField>