force-app/main/default/objects/SDM__c/fields/Have_adequate_protection_from_health__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_protection_from_health__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have adequate protection from health and safety hazards</inlineHelpText>
    <label>Have adequate protection from health</label>
    <type>Checkbox</type>
</CustomField>