force-app/main/default/objects/SDM__c/fields/Have_adequate_transportation_necessary__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_transportation_necessary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have adequate transportation necessary to secure any of the above stated needs</inlineHelpText>
    <label>Have adequate transportation necessary</label>
    <type>Checkbox</type>
</CustomField>