force-app/main/default/objects/SDM__c/fields/Is_this_person_the_legal_guardian__c.field-meta.xml
<CustomField>
    <fullName>Is_this_person_the_legal_guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this person the legal guardian</inlineHelpText>
    <label>Is this person the legal guardian</label>
    <type>Checkbox</type>
</CustomField>