force-app/main/default/objects/SDM__c/fields/Is_vulnerability__c.field-meta.xml
<CustomField>
    <fullName>Is_vulnerability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is vulnerability</label>
    <type>Checkbox</type>
</CustomField>