force-app/main/default/objects/SDM__c/fields/Medical_care_for_physical_and_mental__c.field-meta.xml
<CustomField>
    <fullName>Medical_care_for_physical_and_mental__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Medical care for physical and mental health needs</inlineHelpText>
    <label>Medical care for physical and mental</label>
    <type>Checkbox</type>
</CustomField>