force-app/main/default/objects/SDM__c/fields/Neglect__c.field-meta.xml
<CustomField>
    <fullName>Neglect__c</fullName>
    <label>Neglect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By self</fullName>
            </value>
            <value>
                <fullName>By others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>