force-app/main/default/objects/SDM__c/fields/Neglect_by_self_response__c.field-meta.xml
<CustomField>
    <fullName>Neglect_by_self_response__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Neglect by self - response within 5 days</inlineHelpText>
    <label>Neglect by self response</label>
    <type>Checkbox</type>
</CustomField>