force-app/main/default/objects/SDM__c/fields/Physical_treatment_of_the_adult_poses__c.field-meta.xml
<CustomField>
    <fullName>Physical_treatment_of_the_adult_poses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Physical treatment of the adult poses a significant risk to adult&apos;s health or welfare</inlineHelpText>
    <label>Physical treatment of the adult poses</label>
    <type>Checkbox</type>
</CustomField>