force-app/main/default/objects/SDM__c/fields/Sexual_exploitation_of_adult__c.field-meta.xml
<CustomField>
    <fullName>Sexual_exploitation_of_adult__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sexual exploitation of adult by an adult caregiver, family member, or household member</inlineHelpText>
    <label>Sexual exploitation of adult</label>
    <type>Checkbox</type>
</CustomField>