force-app/main/default/objects/SDM__c/fields/Sexual_molestation_of_a_child__c.field-meta.xml
<CustomField>
    <fullName>Sexual_molestation_of_a_child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sexual molestation of a child by an adult caregiver, family member, or household member.</inlineHelpText>
    <label>Sexual molestation of a child</label>
    <type>Checkbox</type>
</CustomField>