force-app/main/default/objects/SDM__c/fields/Suspicious_death_of_adult_due_to_abuse__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_death_of_adult_due_to_abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspicious death of adult due to abuse</label>
    <type>Checkbox</type>
</CustomField>