force-app/main/default/objects/SDM__c/recordTypes/SDM.recordType-meta.xml
<RecordType>
    <fullName>SDM</fullName>
    <active>true</active>
    <label>SDM</label>
</RecordType>